...
    val timeEditSheetIsShown = remember { mutableStateOf(false) }

    val modalBottomSheetState = rememberModalBottomSheetState()

    if (timeEditSheetIsShown.value) {
        ModalBottomSheet(
            modifier = Modifier.testTag("day-edition-bottom-sheet"),
            onDismissRequest = { timeEditSheetIsShown.value = false },
            sheetState = modalBottomSheetState,
            dragHandle = { BottomSheetDefaults.DragHandle() },
        ) {
            EditDay(
                dayClicked = dayEntityClicked.value,
...
