...
        Row(
            modifier = Modifier.fillMaxWidth(),
            horizontalArrangement = Arrangement.SpaceBetween,
        ) {
            Text(
                text = convertors.convertDateToString(date),
                modifier = Modifier.testTag("day-card-date"),
            )
            Text(
                text = stringResource(
                    id = R.string.day_duration,
                    dayEntityTracking.stringDuration()
                ),
...
